--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ html:
   use_repository_button: false
   use_edit_page_button: false
   show_navbar_depth: 1
+  baseurl: "/vns_remyelination/"
 
 sphinx:
   config:
