--- a/_toc.yml
+++ b/_toc.yml
@@ -5,6 +5,10 @@ root: intro
 parts:
   - caption: Figures
     chapters:
+      - file: figure1_VNSOligos
+        title: "Figure 1: Figure 1 VNS Enhances Oligodendrogenesis"
+      - file: figure3_pairedVNSOligos
+        title: "Figure 3 Success-Paired VNS Enhances Oligodendrogenesis"
       - file: figure6_Neuropixels
         title: "Figure 6: Neuropixels"
       - file: figure7_longtermMyelin
