--- a/_toc.yml
+++ b/_toc.yml
@@ -8,7 +8,7 @@ parts:
       - file: figure1_VNSOligos
         title: "Figure 1: Figure 1 VNS Enhances Oligodendrogenesis"
       - file: figure3_pairedVNSOligos
-        title: "Figure 3 Success-Paired VNS Enhances Oligodendrogenesis"
+        title: "Figure 3: Success-Paired VNS Enhances Oligodendrogenesis"
       - file: figure6_Neuropixels
         title: "Figure 6: Neuropixels"
       - file: figure7_longtermMyelin
