--- a/_toc.yml
+++ b/_toc.yml
@@ -7,6 +7,8 @@ parts:
     chapters:
       - file: figure1_VNSOligos
         title: "Figure 1: VNS Enhances Oligodendrogenesis"
+      - file: figure2_VNSSheathChanges
+        title: "Figure 2: VNS Alone Does Not Affect Sheath Replacement/Patterns"
       - file: figure3_pairedVNSOligos
         title: "Figure 3: Success-Paired VNS Enhances Oligodendrogenesis"
       - file: figure6_Neuropixels
